services/whoami/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: "whoami"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: service
                port:
                  name: web
