services/whoami/resources/whoami.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: whoami
          image: docker.io/jwilder/whoami
          ports:
            - name: web
              containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: service
      port:
        name: web
  tls:
    - hosts:
        - whoami
